...
                android:layout_marginTop="@dimen/margin_top_header_value"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/select_transfer_method_country_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobileCountryRegion"
                    android:textAppearance="@style/SelectTransfer.Header.Label" />

                <TextView
                    android:id="@+id/select_transfer_method_country_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_vertical_margin"
                    android:layout_marginEnd="@dimen/grid_margin_right"
                    tools:text="@string/country_placeholder"
                    android:textAppearance="@style/TextAppearance.Hyperwallet.Subtitle1" />
...
                android:layout_marginTop="@dimen/grid_margin_top"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/select_transfer_method_currency_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobileCurrencyLabel"
                    android:textAppearance="@style/SelectTransfer.Header.Label" />

                <TextView
                    android:id="@+id/select_transfer_method_currency_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/grid_margin_right"
                    android:layout_marginTop="@dimen/item_vertical_margin"
                    android:textAllCaps="true"
                    tools:text="@string/currency_placeholder"
...
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_transfer_method_types_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
