...
    <!-- SelectTransferMethodActivity -->
    <string name="select_transfer_method_title">@string/title_activity_select_transfer_method
    </string>

    <string name="mobileCountryRegion">Country/Region</string>
    <string name="mobileCurrencyLabel">Currency</string>
    <string name="mobileAddTransferMethodHeader">Add transfer method</string>
    <string name="title_activity_add_transfer_method">Add Transfer Method</string>
    <string name="title_add_bank_account">Bank Account</string>
    <string name="title_add_bank_card">Debit Card</string>

    <string name="error_exact_length_field">The length of this field is exactly %d.</string>
    <string name="error_invalid_expiry_date">%s is invalid.</string>
...

    <string name="createTransferMethodButtonLabel">Add Transfer Method</string>
    <string name="default_account_label">Default Account</string>
    <string name="default_account_sub_label">Select a default transfer method</string>
    <string name="api_expiry_date_format">MM/YY</string>

    <string name="feeInformation">%s fee</string>
    <string name="processingTimeInformation" translatable="false">\u0020\u2022 %s</string>
    <string name="noFee">No fee</string>

    <string name="emptyStateAddTransferMethod">Add a transfer method to get started.</string>

    <!-- menu title -->
    <string name="menu_transfer_funds">Transfer</string>
...
    <string name="selected_currency_item_description">Selected currency item</string>
    <string name="transfer_method_context_button_description">Context menu</string>
    <string name="item_select_description">Selected item</string>

    <string name="error_unmapped_field">Unmapped field, Please contact support.</string>

    <string name="country_placeholder">Canada</string>
    <string name="currency_placeholder">CAD</string>
    <string name="feesAndProcessTimePlaceholder">$20.00 USD fee \u2022 1\-3 Business Days </string>
    <string name="mobileCountryCurrencyLabel">LOCATION AND CURRENCY</string>
    <string name="mobileTransferMethodLabel">TRANSFER METHOD</string>
    <string name="mobileTransferMethodsHeader">Transfer methods</string>

...
