<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/country_selection_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/country_selection_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextAppearance="@style/TextAppearance.Hyperwallet.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/navigate_back_description"
        app:theme="@style/ThemeOverlay.Hyperwallet.Searchable.Selector.ActionBar" />

    <View
        android:id="@+id/toolbar_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/colorSecondaryLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_selection_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        style="@style/Selector.Hyperwallet.RecyclerView"
        android:id="@+id/country_selection_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>